--- a/readthedocsext/theme/templates/includes/popupcards/build.html
+++ b/readthedocsext/theme/templates/includes/popupcards/build.html
@@ -15,21 +15,21 @@
   <div class="description">
     <div class="ui list">
       <div class="item">
+        <i class="history icon"></i>
         <div class="content">
           <div class="header">Total time</div>
           <div class="description">{{ build.length }}</div>
         </div>
       </div>
-      <div class="item"></div>
-      <div class="item">{{ build.version_slug }}</div>
     </div>
   </div>
 {% endblock popupcard_content %}
 
 {% block popupcard_extra_content %}
   <span>
-    <a href="{{ build.commit_url }}">
-      <code>{{ build.commit }}</code>
+    <a href="{{ build.get_commit_url }}">
+      <i class="code branch icon"></i>
+      <code>{{ build.commit|slice:"0:8" }}</code>
     </a>
   </span>
 {% endblock popupcard_extra_content %}
