Overview -> Versions on project detail page

--- a/readthedocsext/theme/templates/core/project_bar_base.html
+++ b/readthedocsext/theme/templates/core/project_bar_base.html
@@ -118,7 +118,7 @@
   <!-- project menu -->
   <div class="ui stackable menu">
     <a class="item {{ overview_active }}" href="{{ project.get_absolute_url }}">
-      {% trans "Overview" %}
+      {% trans "Versions" %}
     </a>
     <a class="item {{ builds_active }}" href="{{ project.get_builds_url }}">
       {% trans "Builds" %}
