--- a/readthedocsext/theme/templates/projects/partials/project_list.html
+++ b/readthedocsext/theme/templates/projects/partials/project_list.html
@@ -63,13 +63,32 @@
   <div class="ui primary button">{% trans "Add your first project" %}</div>
 {% endblock list_placeholder_text %}
 
-{% block list_item_right_buttons %}
-  <a class="ui icon button"
-     href=""
-     data-content="{% trans "View project documentation" %}">
-    <i class="external icon"></i>
-  </a>
-{% endblock list_item_right_buttons %}
+{% block list_item_start %}
+  <div class="item" data-bind="with: project({id: {{ object.id }}, url: '{% url "project-detail" object.pk %}'})">
+{% endblock list_item_start %}
+
+{% block list_item_right_menu %}
+  <div class="ui mini right floated buttons" data-bind="event: {mouseover: fetch}">
+    <button class="ui icon button"
+       data-content="{% trans "View project documentation" %}"
+       data-bind="attr: {href: url_docs}, css: {disabled: loading}">
+      <i class="external icon"></i>
+    </button>
+
+    {% if request.user|is_admin:object %}
+      <button class="ui icon dropdown button">
+        <i class="horizontal ellipsis icon"></i>
+        <div class="menu">
+          <div class="header">{% trans "Admin" %}</div>
+          <a class="item" href="{% url "projects_manage" object.slug %}">
+            <i class="wrench icon"></i>
+            {% trans "Configure project" %}
+          </a>
+        </div>
+      </button>
+    {% endif %}
+  </div>
+{% endblock list_item_right_menu %}
 
 {% block list_item_header %}
   <a class="ui basic label" href="{% url "projects_manage" object.slug %}">
@@ -180,8 +199,5 @@
 {% endblock list_item_right_buttons %}
 
 {% block list_item_content %}
-  <a class="ui large basic violet label" href="{% url "projects_manage" object.slug %}">
-    {{ object.name }}
-  </a>
 {% endblock list_item_content %}
 {% endcomment %}
