--- a/readthedocsext/theme/templates/gold/subscription_form.html
+++ b/readthedocsext/theme/templates/gold/subscription_form.html
@@ -2,7 +2,7 @@
 {% load static %}
 {% load i18n %}
 
-{% block profile-admin-gold-edit %}active{% endblock %}
+{% load ext_theme_tags %}
 
 {% block title %}
 Read the Docs Gold
