--- a/readthedocsext/theme/templates/projects/redirect_list.html
+++ b/readthedocsext/theme/templates/projects/redirect_list.html
@@ -2,7 +2,7 @@
 
 {% load i18n %}
 {% load crispy_forms_tags %}
-{% load alter_field %}
+{% load ext_theme_tags %}
 
 {% block title %}{{ project.name }} - {% trans "Redirects" %}{% endblock %}
 
