Add version add/edit view and dropdown

--- a/readthedocsext/theme/templates/builds/partials/version_list.html
+++ b/readthedocsext/theme/templates/builds/partials/version_list.html
@@ -29,13 +29,40 @@
   </a>
 {% endblock top_left_menu_items %}
 
-{% block top_right_menu_items %}
-  <div class="item">
-    <a class="ui tiny green icon button"><i class="plus icon"></i> Add version</a>
-  </div>
-{% endblock top_right_menu_items %}
-
 {% block create_button %}
+  <div class="ui green icon floating manual dropdown button" id="add-version">
+    {% comment %}
+      TODO replace this with an actual query mechanism
+      data-url="{% url "projects-versions-list" project.slug %}?active=False&limit=50"
+    {% endcomment %}
+    <i class="plus icon"></i>
+    <span class="text">{% trans "Add version" %}</span>
+
+    <div class="menu">
+      <div class="ui icon search input">
+        <i class="search icon"></i>
+        <input type="text" placeholder="Search versions...">
+      </div>
+      <div class="divider"></div>
+      <div class="header">
+        <i class="tags icon"></i>
+        {% trans "Versions" %}
+      </div>
+      <div class="scrolling menu">
+        {% for version in project.versions.all %}
+          {% if not version.active %}
+            <a
+                class="item"
+                data-value="{{ version.slug }}"
+                href="{% url "project_version_detail" project.slug version.slug %}">
+              <i class="{% if version.type == "branch" %}code branch {% elif version.type == "tag" %}tag {% endif %}icon"></i>
+              {{ version.verbose_name }}
+            </a>
+          {% endif %}
+        {% endfor %}
+      </div>
+    </div>
+  </div>
 {% endblock %}
 
 {% block list_placeholder_icon_class %}{% endblock %}
@@ -77,7 +104,7 @@
       </div>
     </button>
 
-    {% if request.user|is_admin:project %}
+    {% if is_project_admin %}
       <div class="ui icon dropdown button">
         <i class="horizontal ellipsis icon"></i>
         <div class="menu">
@@ -94,6 +121,12 @@
             href="{% url "project_version_detail" project.slug object.slug %}">
             <i class="wrench icon"></i>
             {% trans "Configure version" %}
+          </a>
+          <a
+            class="item"
+            href="{% url "wipe_version" project.slug object.slug %}">
+            <i class="broom icon"></i>
+            {% trans "Wipe version"%}
           </a>
         </div>
       </div>
