--- a/readthedocsext/theme/templates/semantic-ui/field.html
+++ b/readthedocsext/theme/templates/semantic-ui/field.html
@@ -3,10 +3,10 @@
 {% if field.is_hidden %}
   {{ field }}
 {% else %}
-  {% if field|is_checkbox %}
+  {% if field|is_checkbox %} 
     <div class="{% if field.field.required %} required{% endif %}{% if field.errors %} error{% endif %}{% if 'form-horizontal' in form_class %} inline {% endif %}field">
-      {% if label_class %}
-        <div class="{% for offset in bootstrap_checkbox_offsets %}{{ offset }} {% endfor %}{{ field_class }}">
+      {% if label_class or field.field.widget.attrs.class %}
+        <div class="{% for offset in bootstrap_checkbox_offsets %}{{ offset }} {% endfor %}{{ field_class }}{{ field.field.widget.attrs.class }}">
         {% endif %}
       {% endif %}
     <{% if tag %}{{ tag }}{% else %}div{% endif %} id="div_{{ field.auto_id }}" class="{% if not field|is_checkbox %}{% if field.field.required %}required{% endif %}{% if field.errors %} error{% endif %}{% if 'form-horizontal' in form_class %} inline{% endif %} field{% endif %}{% if wrapper_class %} {{ wrapper_class }}{% endif %}{% if field.css_classes %} {{ field.css_classes }}{% endif %}">
@@ -36,13 +36,14 @@
 
     {% if not field|is_select and not field|is_checkboxselectmultiple and not field|is_radioselect %}
       {% if field|is_checkbox and form_show_labels %}
+        {% crispy_field field 'class' 'form-check-input' %}
         <label for="{{ field.id_for_label }}" class="form-check-label">
-          {% crispy_field field 'class' 'form-check-input' %}
           {{ field.label|safe }}
+
+          {% if field.help_text %}
+            <i class="ui small circular grey help icon" data-html="{{ field.help_text }}"></i>
+          {% endif %}
         </label>
-        {% if field.help_text %}
-          <i class="ui small circular grey help icon" data-html="{{ field.help_text }}"></i>
-        {% endif %}
         {% include 'semantic-ui/layout/field_errors_block.html' with direction="left" %}
       {% elif field|is_file %}
         {% include 'semantic/layout/field_file.html' %}
@@ -58,9 +59,9 @@
   </{% if tag %}{{ tag }}{% else %}div{% endif %}>
 
   {% if field|is_checkbox %}
-    {% if label_class %}
-          </div>
-        {% endif %}
+    {% if label_class or field.field.widget.attrs.class %}
+      </div>
+    {% endif %}
     </div>
   {% endif %}
 {% endif %}
