--- a/readthedocsext/theme/templates/builds/partials/version_list.html
+++ b/readthedocsext/theme/templates/builds/partials/version_list.html
@@ -8,6 +8,8 @@
 {% load privacy_tags %}
 {% load projects_tags %}
 
+{% block view_binding %}data-bind="with: ProjectVersionListView()"{% endblock %}
+
 {% block top_left_menu_items %}
   <div class="item">
     <div class="ui category search">
