--- a/readthedocsext/theme/templates/projects/automation_rule_form.html
+++ b/readthedocsext/theme/templates/projects/automation_rule_form.html
@@ -12,19 +12,13 @@
   {% endif %}
 {% endblock project_edit_content_subheader %}
 
-{% block extra_scripts %}
-  <script type="text/javascript">
-readthedocs.site.project.admin.ProjectAutomationRuleView.init({}, '#project-automation-rule-form');
-  </script>
-{% endblock %}
-
 {% block project_edit_content %}
   {% if object %}
     {% trans "Update rule" as button_text %}
   {% else %}
     {% trans "Add rule" as button_text %}
   {% endif %}
-  <form class="ui form" method="post" action="." id="project-automation-rule-form">
+  <form class="ui form" method="post" action="." data-bind="using: ProjectAutomationRuleView()">
     {% csrf_token %}
     {% alter_field form.predefined_match_arg data_bind="if: true, value: predefined_match_arg" classes="manual select" %}
     {% alter_field form.match_arg data_bind="enable: is_match_arg_visible" %}
