--- a/readthedocsext/theme/templates/projects/search_analytics.html
+++ b/readthedocsext/theme/templates/projects/search_analytics.html
@@ -9,25 +9,21 @@
 
 {% block project_edit_sidebar_embed_doc %}server-side-search{% endblock %}
 
-{% block extra_scripts %}
-  <script type="text/javascript">
-readthedocs.site.project.admin.ProjectSearchAnalyticsView.init();
-  </script>
-{% endblock %}
-
 {% block project_edit_content %}
-  {% include "projects/partials/edit/search_query_list.html" with objects=queries %}
+  <div data-bind="using: ProjectSearchAnalyticsView()">
 
-  <h3 class="ui small header">
-    {% trans "Overview" %}
-    <div class="sub header">
-      {% trans "For the last month" %}
-    </div>
-  </h3>
-  {% if query_count_of_1_month.labels and query_count_of_1_month.int_data %}
-    <div class="ui loading segment" data-bind="css: {loading: is_loading()}">
-      <canvas width="400" height="150" data-bind="chart: config"></canvas>
-      <script type="application/json" data-bind="jsonInit: config">
+    {% include "projects/partials/edit/search_query_list.html" with objects=queries %}
+
+    <h3 class="ui small header">
+      {% trans "Overview" %}
+      <div class="sub header">
+        {% trans "For the last month" %}
+      </div>
+    </h3>
+    {% if query_count_of_1_month.labels and query_count_of_1_month.int_data %}
+      <div class="ui loading segment" data-bind="css: {loading: is_loading}">
+        <canvas width="400" height="150" data-bind="chart: config"></canvas>
+        <script type="application/json" data-bind="jsonInit: config">
 {
   "type": "line",
   "data": {
@@ -54,7 +50,8 @@ readthedocs.site.project.admin.ProjectSearchAnalyticsView.init();
     }
   }
 }
-      </script>
-    </div>
-  {% endif %}
+        </script>
+      </div>
+    {% endif %}
+  </div>
 {% endblock %}
