--- a/readthedocsext/theme/templates/projects/settings_advanced_form.html
+++ b/readthedocsext/theme/templates/projects/settings_advanced_form.html
@@ -8,7 +8,7 @@
 {% block project_advanced_active %}active{% endblock %}
 
 {% block project_edit_content %}
-  <form class="ui form">
+  <div class="ui form">
     {% crispy form %}
-  </form>
+  </div>
 {% endblock %}
