--- a/readthedocsext/theme/templates/semantic-ui/field.html
+++ b/readthedocsext/theme/templates/semantic-ui/field.html
@@ -3,65 +3,9 @@
 {% if field.is_hidden %}
   {{ field }}
 {% else %}
-  {% if field|is_checkbox %} 
-    <div class="{% if field.field.required %} required{% endif %}{% if field.errors %} error{% endif %}{% if 'form-horizontal' in form_class %} inline {% endif %}field">
-      {% if label_class or field.field.widget.attrs.class %}
-        <div class="{% for offset in bootstrap_checkbox_offsets %}{{ offset }} {% endfor %}{{ field_class }}{{ field.field.widget.attrs.class }}">
-        {% endif %}
-      {% endif %}
-    <{% if tag %}{{ tag }}{% else %}div{% endif %} id="div_{{ field.auto_id }}" class="{% if not field|is_checkbox %}{% if field.field.required %}required{% endif %}{% if field.errors %} error{% endif %}{% if 'form-horizontal' in form_class %} inline{% endif %} field{% endif %}{% if wrapper_class %} {{ wrapper_class }}{% endif %}{% if field.css_classes %} {{ field.css_classes }}{% endif %}">
-    {% if field.label and not field|is_checkbox and form_show_labels %}
-      <label for="{{ field.id_for_label }}" class="ui {{ label_class }}"{% if field.help_text %} data-html="{{ field.help_text }}"{% endif %}>
-        {{ field.label|safe }}
-        {% if field.help_text %}
-          <i class="ui small circular grey help icon"></i>
-        {% endif %}
-      </label>
-    {% endif %}
-
-    {% if field|is_select %}
-      {% include 'semantic-ui/layout/dropdown.html' %}
-      {% include 'semantic-ui/layout/field_errors_block.html' %}
-    {% endif %}
-
-    {% if field|is_checkboxselectmultiple %}
-      {% include 'semantic-ui/layout/checkboxselectmultiple.html' %}
-      {% include 'semantic-ui/layout/field_errors_block.html' %}
-    {% endif %}
-
-    {% if field|is_radioselect %}
-      {% include 'semantic-ui/layout/radioselect.html' %}
-      {% include 'semantic-ui/layout/field_errors_block.html' %}
-    {% endif %}
-
-    {% if not field|is_select and not field|is_checkboxselectmultiple and not field|is_radioselect %}
-      {% if field|is_checkbox and form_show_labels %}
-        {% crispy_field field 'class' 'form-check-input' %}
-        <label for="{{ field.id_for_label }}" class="form-check-label">
-          {{ field.label|safe }}
-
-          {% if field.help_text %}
-            <i class="ui small circular grey help icon" data-html="{{ field.help_text }}"></i>
-          {% endif %}
-        </label>
-        {% include 'semantic-ui/layout/field_errors_block.html' with direction="left" %}
-      {% elif field|is_file %}
-        {% include 'semantic/layout/field_file.html' %}
-        {% include 'semantic-ui/layout/field_errors_block.html' %}
-      {% else %}
-        <div class="{{ field_class }}">
-          {% crispy_field field %}
-          {% include 'semantic-ui/layout/field_errors_block.html' %}
-        </div>
-      {% endif %}
-    {% endif %}
-
-  </{% if tag %}{{ tag }}{% else %}div{% endif %}>
-
   {% if field|is_checkbox %}
-    {% if label_class or field.field.widget.attrs.class %}
-      </div>
-    {% endif %}
-    </div>
+    {% include "semantic-ui/fields/checkbox.html" with field=field %}
+  {% else %}
+    {% include "semantic-ui/fields/base.html" with field=field %}
   {% endif %}
 {% endif %}
