--- a/readthedocsext/theme/templates/projects/project_version_detail.html
+++ b/readthedocsext/theme/templates/projects/project_version_detail.html
@@ -1,82 +1,1 @@
-{% extends "base.html" %}
-
-{% load i18n %}
-{% load privacy_tags %}
-{% load crispy_forms_tags %}
-
-{% load ext_theme_tags %}
-
-{% block title %}{{ version.slug }} - {{ version.project.name }}{% endblock %}
-
-{% block project_editing %}
-  {% with versions_active="active" %}
-    {% include "core/project_bar.html" %}
-  {% endwith %}
-{% endblock %}
-
-{% block content %}
-  <div class="ui very padded centered grid stackable">
-
-    {# Left card display #}
-    <div class="six wide computer sixteen wide tablet sixteen wide mobile column">
-      <div class="ui fluid card">
-        <div class="content">
-          <div class="header">
-            <i class="{% if version.type == "branch" %}code branch {% elif version.type == "tag" %}tag {% endif %}icon"></i>
-            <code>{{ version.verbose_name }}</code>
-          </div>
-          <div class="meta">
-            <span>
-              <i class="code branch icon"></i>
-              <code>{{ version.identifier_friendly }}</code>
-            </span>
-          </div>
-        </div>
-
-        <div class="content">
-          <form class="ui form" method="post" action=".">
-            {% csrf_token %}
-
-            {% alter_field form.active classes="ui toggle checkbox" %}
-            {% alter_field form.hidden classes="ui toggle checkbox" %}
-            {{ form|crispy }}
-            <input class="ui primary button" type="submit" value="Update version">
-          </form>
-        </div>
-      </div>
-    </div>
-
-    {# Help display? #}
-    <div class="four wide computer sixteen wide tablet sixteen wide mobile column">
-      HELP
-    </div>
-  </div>
-{% endblock content %}
-
-{% block wtf %}
-  {% if is_project_admin %}
-    {% if not version.active and version.built %}
-        <form class="ui form" name="version_delete_html" method="post" action="{% url "project_version_delete_html" project.slug version.slug %}">
-          {% csrf_token %}
-        </form>
-        <p>
-          {# We are submitting the form using javascript because it breaks the UI design if we use buttons #}
-          {% blocktrans trimmed %}
-            This version is inactive but its documentation is still available online.
-            You can <a href="#" onclick="document.forms['version_delete_html'].submit();">delete this version's documentation</a> if you want to remove it completely.
-          {% endblocktrans %}
-        </p>
-      {% endif %}
-    {% endif %}
-
-
-    <form class="ui form" method="post" action=".">
-      {% csrf_token %}
-      {{ form.as_p }}
-      <p>
-        <input class="ui button" style="display: inline;" type="submit" value="{% trans "Save" %}">
-        {% trans "or" %}
-        <a href="{% url "wipe_version" version.project.slug version.slug %}">{% trans "wipe "%}</a>
-      </p>
-    </form>
-{% endblock %}
+version_form.html
