--- a/readthedocsext/theme/templates/projects/project_detail.html
+++ b/readthedocsext/theme/templates/projects/project_detail.html
@@ -22,7 +22,7 @@
     {% endif %}
   {% endcomment %}
 
-  {% include "builds/partials/version_list.html" with objects=versions|sort_version_aware %}
+  {% include "builds/partials/version_list.html" with objects=versions %}
 
   {% comment %}
     TODO remove this entirely?
