--- a/readthedocsext/theme/templates/builds/partials/build_crud.html
+++ b/readthedocsext/theme/templates/builds/partials/build_crud.html
@@ -5,32 +5,33 @@
 {% load privacy_tags %}
 {% load projects_tags %}
 
+{% block view_binding %}data-bind="with: BuildListView()"{% endblock %}
+
 {% block top_left_menu_items %}
-  <div class="header item">
-    {% trans "For version" %}
-  </div>
+  {# Pass information from Django into site JS #}
+  <script type="application/json" data-bind="jsonInit: config">
+{
+  "api_url": "{% url "projects-versions-list" project.slug %}"
+}
+  </script>
 
-  <div class="active item">
-    <div class="ui inline link search dropdown">
-      <div class="text">Any</div>
+  {# Separate UI for the version search filter field #}
+  <div class="header item">For version</div>
+  <form class="active item" action="." method="get">
+    {% for field in filter.form.visible_fields %}
+      {% if field != filter.form.version %}
+        <input type="hidden" name="{{ field.name }}" value="{{ field.value|default:"" }}" />
+      {% endif %}
+    {% endfor %}
+    <div class="ui link search dropdown" data-bind="semanticui: {dropdown: filter_version_config()}">
+      <input type="hidden" name="version" value="{{ filter.form.version.value|default:"" }}">
+      <div class="default text">{% if filter.form.version.value %}{{ filter.form.version.value }}{% else %}{% trans "All versions" %}{% endif %}</div>
       <i class="dropdown icon"></i>
-
-      <div class="menu">
-        <div class="ui search icon input">
-          <i class="search icon"></i>
-          <input type="text" name="search" placeholder="Search versions">
-        </div>
-
-        <div class="header">{% trans "Versions" %}</div>
-        <a class="active item" data-text="Any">{% trans "Any version" %}</a>
-        {# TODO which one? #}
-        {# {% for version in project.ordered_active_versions %} #}
-        {% for version in versions|sort_version_aware %}
-          <a class="item" data-text="{{ version.slug }}">{{ version.verbose_name }}</a>
-        {% endfor %}
-      </div>
+      <div class="menu"></div>
     </div>
-  </div>
+  </form>
+
+  {% include "includes/filters/form.html" with fields=filter.form %}
 {% endblock top_left_menu_items %}
 
 {% block create_button %}
