--- a/readthedocsext/theme/templates/projects/partials/project_list.html
+++ b/readthedocsext/theme/templates/projects/partials/project_list.html
@@ -10,45 +10,26 @@
 {% block view_binding %}data-bind="with: ProjectListView()"{% endblock view_binding %}
 
 {% block top_left_menu_items %}
-  {% comment %}
-    TODO replace this with a filter search box. This is a dropdown menu for now
-    because of the search dropdown feature. There is now search box that operates
-    in the same way.
-  {% endcomment %}
-  <div class="header item">
-    <div class="ui inline link search dropdown">
-      <i class="search icon"></i>
-      <i class="dropdown icon"></i>
+  {# Pass information from Django into site JS #}
+  <script type="application/json" data-bind="jsonInit: config">
+{
+  "api_url": "{% url "projects-list" %}"
+}
+  </script>
 
-      <div class="menu">
-        <div class="ui search icon input">
-          <i class="search icon"></i>
-          <input type="text" name="search" placeholder="Search projects">
-        </div>
-
-        {# TODO this should be a different query that uses public() queryset #}
-        {% for project in request.user.projects.all %}
-          <a class="item" href="{{ project.get_absolute_url }}">{{ project.name }}</a>
-        {% endfor %}
-      </div>
-    </div>
-  </div>
-
-  <div class="header item">
-    {% trans "Sort by" %}
-  </div>
-
+  {# Separate UI for the version search selection field #}
+  <div class="header item">Project</div>
   <div class="active item">
-    <div class="ui inline link dropdown">
-      <div class="text">Recently built</div>
+    <div class="ui link search dropdown" data-bind="semanticui: {dropdown: filter_project_config()}">
+      <input type="hidden" name="version" value="{{ filter.form.project.value|default:"" }}">
+      <div class="default text">{% trans "All projects" %}</div>
       <i class="dropdown icon"></i>
-
-      <div class="menu">
-        <a class="item" data-text="Recently built">{% trans "Recently built" %}</a>
-        <a class="item" data-text="Name">{% trans "Name" %}</a>
-      </div>
+      <div class="menu"></div>
     </div>
   </div>
+
+  {% include "includes/filters/form.html" with fields=filter.form %}
+
 {% endblock top_left_menu_items %}
 
 {% block create_button %}
