favicon path fixed

--- a/readthedocsext/theme/templates/base.html
+++ b/readthedocsext/theme/templates/base.html
@@ -7,7 +7,7 @@
   <head>
     <title>{% block title %}{% endblock %}{% block head_title %}{% endblock %} - Read the Docs</title>
 
-    <link rel="icon" type="image/png" href="{% static 'corporate/img/favicon.png' %}" />
+    <link rel="icon" type="image/png" href="{% static 'images/favicon.png' %}" />
     <link rel="stylesheet" type="text/css" media="all" href="{% webpack_static "readthedocsext/theme/css/site.css" %}" />
     {% block extra_links %}{% endblock %}
 
