Use `get_static_prefix` instead of `webpack_static`
`webpack_static` fails because it finds a specific file in the manifest and it
does not found it because we are passing a path.

`get_static_prefix` does what we want here: return the prefix for the static
path where the static assets are served from. Locally, with this change the path
returned is `http://community.dev.readthedocs.io/static/readthedocsext/theme`
which is the same returned by `webpack_static`

--- a/readthedocsext/theme/templates/base.html
+++ b/readthedocsext/theme/templates/base.html
@@ -14,6 +14,16 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <meta name="viewport" content="width=device-width" />
 
+    {# This block is used to pass settings between our application and JS #}
+    <script type="application/json" id="site-config">
+{
+  {# TODO make this debug conditional work. It requires altering INTERNAL_IPS #}
+  {% if debug %}"debug": true,{% endif %}
+  "debug": true,
+  "webpack_public_path": "{% get_static_prefix %}/"
+}
+    </script>
+
     {# TODO remove these, from the existing theme #}
     <!--
     <script type="text/javascript" src="{{ MEDIA_URL }}javascript/instantsearch.js"></script>
