Add `readthedocsext/theme/` to `get_static_prefix`

--- a/readthedocsext/theme/templates/base.html
+++ b/readthedocsext/theme/templates/base.html
@@ -20,7 +20,7 @@
   {# TODO make this debug conditional work. It requires altering INTERNAL_IPS #}
   {% if debug %}"debug": true,{% endif %}
   "debug": true,
-  "webpack_public_path": "{% get_static_prefix %}/"
+  "webpack_public_path": "{% get_static_prefix %}readthedocsext/theme/"
 }
     </script>
 
