Fix project list configure link

--- a/readthedocsext/theme/templates/projects/partials/project_list.html
+++ b/readthedocsext/theme/templates/projects/partials/project_list.html
@@ -63,7 +63,7 @@
         <i class="horizontal ellipsis icon"></i>
         <div class="menu">
           <div class="header">{% trans "Admin" %}</div>
-          <a class="item" href="{% url "projects_manage" object.slug %}">
+          <a class="item" href="{% url "projects_edit" object.slug %}">
             <i class="wrench icon"></i>
             {% trans "Configure project" %}
           </a>
